bug#2139: baby id visible

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -50,7 +50,7 @@ page-login {
       }
       .text-link-forgotPassword{
         margin-top:30px;
-        color:#717171;
+        color: color($colors, primary, base);
         font-size: 16px;
       }
       .text-link-CreatNewAcc{
